8. AURA/lightning-case-duplicate-manager/objects/Record_Match_Rule__mdt/Record_Match_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Contains criteria/rules for record matches. Used for Possible Case Matches</description>
    <label>Record Match Rule</label>
    <pluralLabel>Record Match Rules</pluralLabel>
</CustomObject>