8. AURA/lightning-case-duplicate-manager/objects/Record_Match_Rule__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this rule is Active or not</description>
    <inlineHelpText>Is this rule Active?</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>