8. AURA/lightning-case-duplicate-manager/objects/Record_Match_Rule__mdt/fields/Automation_Lightning__c.field-meta.xml
<CustomField>
    <fullName>Automation_Lightning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This filed notify whether the matching rule is used at case trigger Automation or Case lightning component.</description>
    <inlineHelpText>If checked the Rule is used in the Case Trigger Automation</inlineHelpText>
    <label>Automation/Lightning</label>
    <type>Checkbox</type>
</CustomField>