8. AURA/lightning-case-duplicate-manager/objects/Record_Match_Rule__mdt/fields/Exclusion_Rule__c.field-meta.xml
<CustomField>
    <fullName>Exclusion_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The match rule will be treated as an exclusion rule to not include records that match the filter criteria</description>
    <inlineHelpText>Check this checkbox to treat this matching rule as an exclusion rule, records matching this criteria will not be included in the possible matches</inlineHelpText>
    <label>Exclusion Rule</label>
    <type>Checkbox</type>
</CustomField>