8. AURA/lightning-case-duplicate-manager/objects/Record_Match_Rule__mdt/fields/Matching_Condition_Regex__c.field-meta.xml
<CustomField>
    <fullName>Matching_Condition_Regex__c</fullName>
    <description>Regular expression to be used to form a matching condition</description>
    <inlineHelpText>Regular expression to be used to form a matching condition</inlineHelpText>
    <label>Matching Condition Regex</label>
    <type>TextArea</type>
</CustomField>