8. AURA/lightning-case-duplicate-manager/objects/Record_Match_Rule__mdt/fields/Object_Field__c.field-meta.xml
<CustomField>
    <fullName>Object_Field__c</fullName>
    <description>Salesforce Object Field Api Name to Match</description>
    <inlineHelpText>Salesforce Object Field Api Name to Match</inlineHelpText>
    <label>Object Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>