8. AURA/lightning-case-duplicate-manager/objects/Record_Match_Rule__mdt/validationRules/Levenshtein_Distance_with_Like.validationRule-meta.xml
<ValidationRule>
    <fullName>Levenshtein_Distance_with_Like</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Matching_Criteria__c,&#39;Like&#39;) &amp;&amp; ISBLANK(Levenshtein_Distance__c)</errorConditionFormula>
    <errorMessage>Please enter an Integer value for Levenshtein Distance to use for Fuzzy Matching when using Like operator</errorMessage>
</ValidationRule>