8. AURA/lightning-case-duplicate-manager/objects/Record_Match_Rule__mdt/validationRules/Regex_Should_not_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Regex_Should_not_be_blank</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Matching_Criteria__c,&#39;Regex&#39;)  &amp;&amp;   ISBLANK(Matching_Condition_Regex__c)</errorConditionFormula>
    <errorDisplayField>Matching_Condition_Regex__c</errorDisplayField>
    <errorMessage>Please enter a valid Regular expression</errorMessage>
</ValidationRule>