8. AURA/lightning-case-duplicate-manager/objects/Record_Match_Rule__mdt/listViews/With_Details.listView-meta.xml
<ListView>
    <fullName>With_Details</fullName>
    <columns>Object_Name__c</columns>
    <columns>MasterLabel</columns>
    <columns>Object_Field__c</columns>
    <columns>Matching_Criteria__c</columns>
    <columns>Contains_Text__c</columns>
    <columns>Active__c</columns>
    <columns>Levenshtein_Distance__c</columns>
    <columns>Exclusion_Rule__c</columns>
    <columns>Automation_Lightning__c</columns>
    <filterScope>Everything</filterScope>
    <label>With Details</label>
</ListView>